# gduck-rpc

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  build.rs  compose.yml
.github/workflows/: docker.yml  lint-rust.yml  python-client.yml
client/: .gitignore  Dockerfile  README.md  build.sh  client.py  codegen.sh  main.py  pyproject.toml  request.py
client/gduck/: __init__.py  client.py  exceptions.py  request.py  response.py  types.py
client/tests/: conftest.py
client/tests/gduck/: test_gduck.py  test_query_value.py
proto/: database.proto  error.proto  location.proto  message.proto  query.proto  service.proto
src/: error.rs  gduck.rs  main.rs  proto.rs  service.rs  uri.rs
