[project]
name = "gduck-client"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "grpcio-tools>=1.71.0",
    "grpcio>=1.71.0",
    "python-dateutil>=2.9.0.post0",
]

[tool.ruff]
line-length = 140

[tool.ruff.lint]


[tool.pysen]
version = "0.11"

[tool.uv]
dev-dependencies = [
    "mypy>=1.15.0",
    "pytest>=8.3.5",
    "ruff>=0.11.8",
    "testcontainers>=4.10.0",
]
